[package]
name = "shremdup"
version = "0.1.7"
edition = "2021"
license = "MIT"
authors = ["DiscreteTom <discrete_tom@outlook.com>"]
description = "Call Windows Desktop Duplication API from through gRPC and shared-memory."
repository = "https://github.com/DiscreteTom/shremdup"
keywords = ["shared-memory", "desktop-duplication", "windows", "grpc"]

[dependencies]
rusty-duplication = "0.5.0"
tokio = { version = "1", features = ["full"] }
windows = { version = "0.48.0", features = ["Win32_Graphics_Dxgi", "Win32_Foundation", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi"] }
tonic = "0.9"
prost = "0.11"

[build-dependencies]
tonic-build = "0.9"